# EDINET-Growth-Company-Analysis-Pipeline

./: .gitignore  .gitignore.backup  README.md  pyproject.toml
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
edinet_dbt/: dbt_project.yml  profiles.yml
edinet_dbt/models/: source.yml
edinet_dbt/models/marts/: company_growth_analysis_with_industry.sql  high_growth_one_year.sql
edinet_dbt/models/staging/: stg_annual_reports_cleaned.sql
local_dev/: .dockerignnore  README.md  dockerfile  main.py  requirements.txt  run_pipeline.sh
local_dev/core/: config.py
local_dev/duckdb/: create_local_db.py  run_local_db.py
local_dev/edinet_dbt/: profiles.yml
local_dev/edinet_dbt/models/: schema.yml
local_dev/scripts/step1_fetch_edinet_data/: download_document_csv.py  fetch_document_metadata.py  filter_documents.py  save_metadata.py
pipeline/: .env  .gcloudignore  dockerfile  main.py  requirements.txt
pipeline/core/: config.py  storage.py
snowflake/: 01_creaate_database_and_sche3ma.sql  02_create_storage_integration.sql  03_create_stage.sql  04_create_file_format.sql  05_create_raw_tables.sql  06_load_raw_tables.sql  07_gcs_edinet_notification_integration.sql  08_create_pipes.sql  09_check_pipes.sql
terraform/: artifact_registry.tf  cloud_run_job.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  secret_manager.tf  storage.tf  terraform.tfvars  terraform.tfvars.example  variable.tf  variables.tf  versions.tf  workload_identity.tf
tests/pipeline/: test_download_document_csvs_to_gcs.py  test_metadata_pipeline.py
(+18 files in other folders)
